<resources>
    <string name="app_name">UML Class Editor</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="new_attribute_string">New attribute…</string>
    <string name="new_method_string">New method…</string>
    <string name="attributes_string">Attributes</string>
    <string name="methods_string">Methods</string>
    <string name="new_value_string">New Value…</string>
    <string name="values_string">Values</string>
    <string name="parameters_string">Parameters</string>
    <string name="new_parameter_string">New Parameter…</string>
    <string name="edit_attribute_string">Edit Attribute</string>
    <string name="create_attribute_string">Create Attribute</string>
    <string name="edit_class_string">Edit String</string>
    <string name="create_class_string">Create Class</string>
    <string name="create_method_string">Create Method</string>
    <string name="edit_method_string">Edit Method</string>
    <string name="edit_parameter_string">Edit Parameter</string>
    <string name="create_parameter_string">Create Parameter</string>
    <string name="pdf_export">Export to PDF</string>
    <string name="project_name">Project Name</string>
    <string name="new_project">New</string>
    <string name="load_project">Load</string>
    <string name="project">Project</string>
    <string name="save_as">Save As</string>
    <string name="merge_project">Merge</string>
    <string name="delete_project">Delete</string>
    <string name="edit_attribute">Edit Attribute</string>
    <string name="name">Name :</string>
    <string name="enter_a_name">Enter a Name</string>
    <string name="public_string">Public</string>
    <string name="protected_string">Protected</string>
    <string name="private_string">Private</string>
    <string name="static_string">Static</string>
    <string name="final_string">Final</string>
    <string name="type_string">Type :</string>
    <string name="single">Single</string>
    <string name="collection">Collection</string>
    <string name="array">Array</string>
    <string name="dimension">Dimension :</string>
    <string name="cancel">@android:string/cancel</string>
    <string name="ok">@android:string/ok</string>
    <string name="del">DEL</string>
    <string name="edit_method">Edit Method</string>
    <string name="java_class">Java Class</string>
    <string name="abstract_class">Abstract Class</string>
    <string name="interface_string">Interface</string>
    <string name="enum_string">Enum</string>
    <string name="edit_parameter">Edit parameter</string>
    <string name="custom_types">Custom Types</string>
    <string name="create_string">Create</string>
    <string name="delete_string">Delete</string>
    <string name="import_string">Import JSON</string>
    <string name="export_string">Export as JSON</string>
    <string name="help">Help</string>
    <string name="share">Share</string>
    <string name="add_a_class">Add a class</string>
    <string name="composition_and_contained_arrow">Composition and Contained Arrow</string>
    <string name="class_add_str">+ class</string>
    <string name="dependence_arrow">Dependence Arrow</string>
    <string name="association">Association</string>
    <string name="escape">Escape</string>
    <string name="esc">ESC</string>
    <string name="composition_arrow">Composition Arrow</string>
    <string name="realisation_arrow">Realisation Arrow</string>
    <string name="inheritance_arrow">Inheritance Arrow</string>
    <string name="save">Save</string>
</resources>