<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ParameterEditorFragment"
    android:layout_margin="5dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edit_parameter_text"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="20sp"
        android:textSize="20sp"
        android:text="@string/edit_parameter" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/parameter_name_text"
        android:layout_alignStart="@id/edit_parameter_text"
        android:layout_alignBaseline="@id/parameter_name_input"
        android:layout_marginBottom="20sp"
        android:textSize="18sp"
        android:text="@string/name"/>

    <EditText
        android:id="@+id/parameter_name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_parameter_text"
        android:layout_toEndOf="@id/parameter_name_text"
        android:gravity="start"
        android:hint="@string/enter_a_name"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp"
        android:textSize="18sp"
        tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/parameter_type_text"
        android:textSize="18sp"
        android:layout_marginBottom="10sp"
        android:layout_alignStart="@id/parameter_name_text"
        android:layout_below="@id/parameter_name_input"
        android:text="@string/type_string"/>

    <Spinner
        android:id="@+id/parameter_type_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/parameter_type_text"
        android:layout_marginBottom="20sp"
        android:layout_toEndOf="@id/parameter_type_text"
        android:minHeight="48dp"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

    <RadioGroup
        android:id="@+id/parameter_multiplicity_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/parameter_type_text"
        android:layout_alignStart="@id/parameter_type_text"
        android:layout_marginStart="5dp"
        android:layout_marginTop="26dp"
        android:layout_marginBottom="10sp"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/parameter_simple_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20sp"
            android:checked="true"
            android:minHeight="48dp"
            android:text="@string/single"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/parameter_collection_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20sp"
            android:minHeight="48dp"
            android:text="@string/collection"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/parameter_array_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20sp"
            android:minHeight="48dp"
            android:text="@string/array"
            android:textSize="18sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/parameter_dimension_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/parameter_multiplicity_radio_group"
        android:layout_toEndOf="@id/parameter_multiplicity_radio_group"
        android:paddingBottom="24sp"
        android:text="@string/dimension"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/parameter_dimension_input"
        android:layout_width="50sp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/parameter_dimension_text"
        android:layout_marginBottom="20sp"
        android:layout_toEndOf="@id/parameter_dimension_text"
        android:inputType="number"
        android:minHeight="48dp"
        android:textSize="18sp"
        tools:ignore="SpeakableTextPresentCheck" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/parameter_multiplicity_radio_group"
        android:gravity="center_horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/parameter_cancel_button"
            android:textSize="18sp"
            android:drawableStart="@drawable/baseline_cancel_black_18dp"
            android:text="@string/cancel"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/parameter_ok_button"
            android:textSize="18sp"

            android:drawableStart="@drawable/baseline_delete_forever_black_18dp"
            android:text="@string/del"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/delete_parameter_button"
            android:textSize="18sp"
            android:drawableStart="@drawable/baseline_check_black_18dp"
            android:text="@string/ok"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>

</RelativeLayout>