<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MethodEditorFragment">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".view.MethodEditorFragment"
    android:layout_margin="5dp">

    <TextView
        android:id="@+id/edit_method_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="20sp"
        android:text="@string/edit_method"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/method_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/method_name_input"
        android:layout_alignStart="@id/edit_method_text"
        android:layout_marginBottom="20sp"
        android:text="@string/name"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/method_name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_method_text"
        android:layout_toEndOf="@id/method_name_text"
        android:gravity="start"
        android:hint="@string/enter_a_name"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp"
        android:textSize="18sp"
        tools:ignore="TextContrastCheck" />

    <RadioGroup
        android:id="@+id/method_visibility_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/method_name_input"
        android:layout_alignStart="@id/method_name_text"
        android:layout_marginBottom="10sp"
        android:gravity="center"
        android:minHeight="48dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/method_public_radio"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="5sp"
            android:checked="true"
            android:text="@string/public_string"
            android:buttonTint="@color/radioButtonColor"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/method_protected_radio"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="5sp"
            android:text="@string/protected_string"
            android:buttonTint="@color/radioButtonColor"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/method_private_radio"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="5sp"
            android:text="@string/private_string"
            android:buttonTint="@color/radioButtonColor"
            android:textSize="18sp" />
    </RadioGroup>

    <CheckBox
        android:id="@+id/method_static_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/method_visibility_radio_group"
        android:layout_alignStart="@id/method_visibility_radio_group"
        android:layout_marginEnd="20sp"
        android:layout_marginBottom="20sp"
        android:minHeight="48dp"
        android:text="@string/static_string"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/method_type_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/method_static_check"
        android:layout_alignStart="@id/method_static_check"
        android:layout_marginBottom="20sp"
        android:text="@string/type_string"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/method_type_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/method_type_text"
        android:layout_marginBottom="10sp"
        android:layout_toEndOf="@id/method_type_text"
        android:minHeight="48dp"
        tools:ignore="SpeakableTextPresentCheck" />

    <RadioGroup
        android:id="@+id/method_multiplicity_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/method_type_text"
        android:layout_alignStart="@id/method_type_text"
        android:layout_marginBottom="10sp"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/method_simple_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:checked="true"
            android:minHeight="48dp"
            android:text="@string/single"
            android:buttonTint="@color/radioButtonColor"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/method_collection_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:minHeight="48dp"
            android:text="@string/collection"
            android:buttonTint="@color/radioButtonColor"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/method_array_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:minHeight="48dp"
            android:text="@string/array"
            android:buttonTint="@color/radioButtonColor"
            android:textSize="18sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/method_dimension_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/method_multiplicity_radio_group"
        android:layout_toEndOf="@id/method_multiplicity_radio_group"
        android:paddingBottom="15sp"
        android:text="@string/dimension"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/method_dimension_input"
        android:layout_width="50sp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/method_dimension_text"
        android:layout_marginStart="-1dp"
        android:layout_marginBottom="20sp"
        android:layout_toEndOf="@id/method_dimension_text"
        android:inputType="number"
        android:minHeight="48dp"
        android:textSize="18sp"
        tools:ignore="SpeakableTextPresentCheck"
        android:importantForAutofill="no" />

    <ExpandableListView
        android:id="@+id/method_parameters_list"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_below="@id/method_ok_cancel_linear"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/method_ok_cancel_linear"
        android:layout_below="@id/method_multiplicity_radio_group"
        android:gravity="center_horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/method_cancel_button"
            android:textSize="18sp"
            android:drawableStart="@drawable/baseline_cancel_black_18dp"
            android:text="@string/cancel"
            android:textColor="@android:color/black"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/method_ok_button"
            android:textSize="18sp"
            android:drawableStart="@drawable/baseline_delete_forever_black_18dp"
            android:text="@string/del"
            android:textColor="@android:color/black"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/delete_method_button"
            android:textSize="18sp"
            android:drawableStart="@drawable/baseline_check_black_18dp"
            android:text="@string/ok"
            android:textColor="@android:color/black"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>

</RelativeLayout>
</ScrollView>