<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.AttributeEditorFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center"
        tools:context=".view.ClassEditorFragment">

        <LinearLayout
            android:id="@+id/attribute_state_container"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_below="@+id/attribute_visibility_radio_group"
            android:gravity="center"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/attribute_static_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20sp"
                android:layout_marginBottom="20sp"
                android:minHeight="48dp"
                android:text="@string/static_string"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/attribute_final_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20sp"
                android:layout_marginBottom="20sp"
                android:minHeight="48dp"
                android:text="@string/final_string"
                android:textSize="18sp" />
        </LinearLayout>

        <EditText
            android:id="@+id/attribute_name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edit_attribute_text"
            android:layout_toEndOf="@id/attribute_name_text"
            android:gravity="start"
            android:hint="@string/enter_a_name"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="48dp"
            android:textSize="18sp"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/attribute_dimension_input"
            android:layout_width="50sp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/attribute_dimension_text"
            android:layout_marginBottom="20sp"
            android:layout_toEndOf="@id/attribute_dimension_text"
            android:importantForAutofill="no"
            android:inputType="number"
            android:minHeight="48dp"
            android:textSize="18sp"
            tools:ignore="SpeakableTextPresentCheck" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/attribute_multiplicity_radio_group"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/attribute_cancel_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/baseline_cancel_black_18dp"
                android:text="@string/cancel"
                android:textColor="#000000"
                android:textSize="18sp" />

            <Button
                android:id="@+id/attribute_ok_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/baseline_delete_forever_black_18dp"
                android:text="@string/del"

                android:textColor="#000000"
                android:textSize="18sp" />

            <Button
                android:id="@+id/delete_attribute_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/baseline_check_black_18dp"
                android:text="@string/ok"
                android:textColor="#000000"
                android:textSize="18sp" />

        </LinearLayout>

        <RadioGroup
            android:id="@+id/attribute_visibility_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/attribute_name_input"
            android:layout_alignStart="@id/attribute_name_text"
            android:layout_marginBottom="10sp"
            android:gravity="center"
            android:minHeight="48dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/attribute_public_radio"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="5sp"
                android:buttonTint="@color/radioButtonColor"
                android:checked="true"
                android:text="@string/public_string"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/attribute_protected_radio"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="5sp"
                android:buttonTint="@color/radioButtonColor"
                android:text="@string/protected_string"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/attribute_private_radio"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="5sp"
                android:buttonTint="@color/radioButtonColor"
                android:text="@string/private_string"
                android:textSize="18sp"
                tools:ignore="TouchTargetSizeCheck" />
        </RadioGroup>

        <RadioGroup
            android:id="@+id/attribute_multiplicity_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/attribute_type_text"
            android:layout_alignStart="@id/attribute_type_text"
            android:layout_marginBottom="10sp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/attribute_simple_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10sp"
                android:checked="true"
                android:minHeight="48dp"
                android:text="@string/single"
                android:textSize="18sp"
                android:buttonTint="@color/radioButtonColor"
                />

            <RadioButton
                android:id="@+id/attribute_collection_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10sp"
                android:minHeight="48dp"
                android:text="@string/collection"
                android:textSize="18sp"
                android:buttonTint="@color/radioButtonColor"
                />

            <RadioButton
                android:id="@+id/attribute_array_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10sp"
                android:minHeight="48dp"
                android:text="@string/array"
                android:textSize="18sp"
                android:buttonTint="@color/radioButtonColor"
                />
        </RadioGroup>

        <Spinner
            android:id="@+id/attribute_type_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/attribute_type_text"
            android:layout_marginBottom="10sp"
            android:layout_toEndOf="@id/attribute_type_text"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/edit_attribute_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="20sp"
            android:text="@string/edit_attribute"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/attribute_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/attribute_name_input"
            android:layout_alignStart="@id/edit_attribute_text"
            android:layout_marginBottom="20sp"
            android:text="@string/name"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/attribute_type_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/attribute_state_container"
            android:layout_alignStart="@id/attribute_state_container"
            android:layout_marginBottom="20sp"
            android:text="@string/type_string"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/attribute_dimension_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/attribute_multiplicity_radio_group"
            android:layout_toEndOf="@id/attribute_multiplicity_radio_group"
            android:paddingBottom="24sp"
            android:text="@string/dimension"
            android:textSize="18sp" />

    </RelativeLayout>
</ScrollView>